fix section tanggapan

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3524,11 +3524,6 @@ input[type="range"]:active::-webkit-slider-thumb{
   color: rgb(176 35 58 / var(--tw-text-opacity));
 }
 
-.text-\[\#1f2f5f\]{
-  --tw-text-opacity: 1;
-  color: rgb(31 47 95 / var(--tw-text-opacity));
-}
-
 .underline{
   text-decoration-line: underline;
 }
